--- a/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
+++ b/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
@@ -12,6 +12,11 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 
+tr {
+    border-width: thick;
+    border-radius: 10px;
+}
+
 .modal-content {
     background-color: #f4f4f4;
     padding: 20px;
