--- a/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
+++ b/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     position: fixed;
-    z-index: 1000;
+    z-index: 1050;
     left: 0;
     top: 0;
     width: 100%;
@@ -12,45 +12,81 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-tr {
-    border-width: thick;
-    border-radius: 10px;
-}
-
 .modal-content {
-    background-color: #f4f4f4;
-    padding: 20px;
-    border-radius: 10px;
-    width: 80%;
-    max-width: 600px;
-    margin: auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: #2c2c2c;
+    color: #fff;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    max-width: 86%;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .close {
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    color: #107c10;
-    cursor: pointer; 
+    position: absolute;
+    font-size: 45px;
+    color: #fff;
+    margin-right: 22px;
+    align-self: self-end;
+    cursor: pointer;
+    border: none;
+    background: none;
+
     &:hover {
-        color: #d00;
+        color: #e63946;
     }
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+.modal-image {
+    max-width: 456px;
+    border-radius: 5px;
+
+    @media (max-width: 768px) {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+.modal-info {
+    flex: 1;
+    padding-left: 20px;
+
+    @media (max-width: 768px) {
+        padding-left: 0;
+    }
+}
+
+.type-badge {
+    background-color: #007bff;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-right: 5px;
 }
 
 .table-details {
     width: 100%;
-    margin-top: 20px;
     border-collapse: collapse;
 
     th, td {
         padding: 8px;
         text-align: left;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid #444;
     }
 
     th {
         background-color: #107c10;
-        color: white;
     }
 }
