--- a/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
+++ b/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
@@ -40,7 +40,7 @@
 .modal-body {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
 
     @media (max-width: 768px) {
