--- a/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
+++ b/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
@@ -49,6 +49,10 @@
     }
 }
 
+.type-badges {
+    text-align: -webkit-center;
+}
+
 .modal-image {
     max-width: 456px;
     border-radius: 5px;
@@ -80,7 +84,8 @@
     width: 100%;
     border-collapse: collapse;
 
-    th, td {
+    th,
+    td {
         padding: 8px;
         text-align: left;
         border-bottom: 1px solid #444;
