--- a/src/app/shared/components/menu-navegacao/menu-navegacao.component.scss
+++ b/src/app/shared/components/menu-navegacao/menu-navegacao.component.scss
@@ -24,7 +24,7 @@
 
     &:hover,
     &:focus {
-      background-color: #1E8449;
+      background-color: #21d760;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     }
 
@@ -34,7 +34,7 @@
   }
 
   .router-link-active {
-    border-bottom: 3px solid #28B463;
+    border-bottom: 1px solid #28B463;
     background-color: #145A32;
   }
 
