--- a/src/app/shared/components/menu-navegacao/menu-navegacao.component.html
+++ b/src/app/shared/components/menu-navegacao/menu-navegacao.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
   <ul>
-    <li><a routerLink="/" routerLinkActive="router-link-active" [routerLinkActiveOptions]="{exact: true}">Início</a></li>
-    <li><a routerLink="/listar-cartas" routerLinkActive="router-link-active">Listar Cartas</a></li>
-    <li><a routerLink="/criar-baralho" routerLinkActive="router-link-active">Criar Baralho</a></li>
-    <li><a routerLink="/ver-baralhos-criados" routerLinkActive="router-link-active">Ver Baralhos Criados</a></li>
+    <li><a routerLink="/" routerLinkActive="router-link-active" [routerLinkActiveOptions]="{exact: true}"><i class="fas fa-home"></i> Início</a></li>
+    <li><a routerLink="/listar-cartas" routerLinkActive="router-link-active"><i class="fas fa-list"></i> Listar Cartas</a></li>
+    <li><a routerLink="/criar-baralho" routerLinkActive="router-link-active"><i class="fas fa-plus-square"></i> Criar Baralho</a></li>
+    <li><a routerLink="/ver-baralhos-criados" routerLinkActive="router-link-active"><i class="fas fa-eye"></i> Ver Baralhos Criados</a></li>
   </ul>
 </nav>
