--- a/src/app/pages/pagina-entrada/pagina-entrada.component.html
+++ b/src/app/pages/pagina-entrada/pagina-entrada.component.html
@@ -1,14 +1,13 @@
 <div class="welcome-page">
-    <header class="welcome-header">
-      <h1>Gerenciador de Baralhos TCG - <b>Gustavo Vasconcelos</b></h1>
-      <p>Prepare-se para gerenciar suas coleções como um comandante!</p>
-    </header>
-    <img src="assets/pokemon-logo.png" alt="Imagem da logo" class="pokemon-image"> 
-    <main class="welcome-content">
-      <div class="actions">
-        <a routerLink="/ver-baralhos-criados" class="btn">Ver Baralhos Criados</a>
-        <a routerLink="/criar-baralho" class="btn btn-primary">Criar Novo Baralho</a>
-      </div>
-    </main>
-  </div>
-  
+  <header class="welcome-header">
+    <h1>Gerenciador de Baralhos TCG - <b>Gustavo Vasconcelos</b></h1>
+    <p>Prepare-se para gerenciar suas coleções como um comandante!</p>
+  </header>
+  <img src="assets/pokemon-logo.png" alt="Logo Pokémon" class="pokemon-image">
+  <main class="welcome-content">
+    <div class="actions">
+      <a routerLink="/ver-baralhos-criados" class="btn"><i class="fas fa-eye"></i> Ver Baralhos Criados</a>
+      <a routerLink="/criar-baralho" class="btn btn-primary"><i class="fas fa-plus-square"></i> Criar Novo Baralho</a>
+    </div>
+  </main>
+</div>
