--- a/src/app/shared/components/menu-navegacao/menu-navegacao.component.html
+++ b/src/app/shared/components/menu-navegacao/menu-navegacao.component.html
@@ -4,5 +4,7 @@
     <li><a routerLink="/listar-cartas" routerLinkActive="router-link-active"><i class="fas fa-list"></i> Listar Cartas</a></li>
     <li><a routerLink="/criar-baralho" routerLinkActive="router-link-active"><i class="fas fa-plus-square"></i> Criar Baralho</a></li>
     <li><a routerLink="/ver-baralhos-criados" routerLinkActive="router-link-active"><i class="fas fa-eye"></i> Ver Baralhos Criados</a></li>
+    <li><a routerLink="/ver-conjuntos" routerLinkActive="router-link-active"><i class="fas fa-eye"></i> Conjuntos</a></li>
+
   </ul>
 </nav>
