--- a/src/app/pages/pagina-entrada/pagina-entrada.component.html
+++ b/src/app/pages/pagina-entrada/pagina-entrada.component.html
@@ -3,7 +3,7 @@
     <h1>Gerenciador de Baralhos TCG - <b>Gustavo Vasconcelos</b></h1>
     <p>Prepare-se para gerenciar suas coleções como um comandante!</p>
   </header>
-  <img src="assets/pokemon-logo.png" alt="Logo Pokémon" class="pokemon-image">
+  <img src="assets/logo.png" alt="Logo Pokémon" class="pokemon-image">
   <main class="welcome-content">
     <div class="actions">
       <a routerLink="/ver-baralhos-criados" class="btn"><i class="fas fa-eye"></i> Ver Baralhos Criados</a>
