--- a/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.html
+++ b/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.html
@@ -1,10 +1,17 @@
 <div class="sets-container">
     <h1>Conjuntos de Cartas Pokémon</h1>
-    <input type="text" [(ngModel)]="searchQuery" placeholder="Buscar conjuntos..." (keyup)="loadSets()">
+    <input type="text" [(ngModel)]="searchQuery" placeholder="Buscar conjuntos..." (keyup.enter)="applyFilter()">
+    <button (click)="applyFilter()">Buscar</button>
+    <button (click)="clearFilter()">Limpar Filtro</button>
     <div *ngFor="let conjunto of conjuntos | async" class="set-card">
-        <h3>{{ conjunto.name }}</h3>
-        <p>Série: {{ conjunto.series }}</p>
-        <p>Total de Cartas: {{ conjunto.total }}</p>
-        <img [src]="conjunto.images.logo" alt="Logo do conjunto">
+      <h3>{{ conjunto.name }}</h3>
+      <img [src]="conjunto.images.logo" alt="Logo do conjunto {{ conjunto.name }}">
+      <p>Série: {{ conjunto.series }}</p>
+      <p>Total de Cartas: {{ conjunto.total }}</p>
+      <p>Data de Lançamento: {{ conjunto.releaseDate | date }}</p>
+      <p>Legalidades: <span *ngFor="let legality of conjunto.legalities | keyvalue">{{ legality.key }}: {{ legality.value }}</span></p>
     </div>
-</div>
+    <button (click)="previousPage()" [disabled]="currentPage === 1">Anterior</button>
+    <button (click)="nextPage()">Próximo</button>
+  </div>
+  
