--- a/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.scss
+++ b/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.scss
@@ -101,5 +101,25 @@
         justify-content: center;
         width: 100%;
         margin-top: 20px;
+
+        button {
+            padding: 10px 20px;
+            margin: 0 5px;
+            background-color: #007bff;
+            border: none;
+            border-radius: 25px;
+            color: white;
+            cursor: pointer;
+
+            &:hover {
+                background-color: darken(#4A90E2, 10%);
+            }
+
+            &:disabled {
+                background-color: #ccc;
+                color: #666;
+                cursor: not-allowed;
+            }
+        }
     }
 }
