--- a/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.html
+++ b/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.html
@@ -1,23 +1,26 @@
 <div class="sets-container">
   <div class="search-header">
-    <h1>Conjuntos de Cartas Pokémon</h1>
+    <h1><i class="fas fa-boxes"></i> Conjuntos de Cartas Pokémon</h1>
     <input type="text" [(ngModel)]="searchQuery" placeholder="Buscar conjuntos..." (keyup.enter)="applyFilter()">
-    <button (click)="applyFilter()">Buscar</button>
-    <button (click)="clearFilter()">Limpar Filtro</button>
+    <button (click)="applyFilter()"><i class="fas fa-search"></i> Buscar</button>
+    <button (click)="clearFilter()"><i class="fas fa-eraser"></i> Limpar Filtro</button>
   </div>
   <div class="cards-grid">
     <div *ngFor="let conjunto of conjuntos | async" class="set-card">
-      <h3><strong>{{ conjunto.name }}</strong></h3>
+      <h3><strong><i class="fas fa-cube"></i> {{ conjunto.name }}</strong></h3>
       <img [src]="conjunto.images.logo" alt="Logo do conjunto {{ conjunto.name }}">
-      <p>Série: {{ conjunto.series }}</p>
-      <p>Total de Cartas: {{ conjunto.total }}</p>
-      <p>Data de Lançamento: {{ conjunto.releaseDate | date }}</p>
-      <p>Legalidades: <span *ngFor="let legality of conjunto.legalities | keyvalue">{{ legality.key }}: {{
-          legality.value }}</span></p>
+      <p><i class="fas fa-layer-group"></i> Série: {{ conjunto.series }}</p>
+      <p><i class="fas fa-cards"></i> Total de Cartas: {{ conjunto.total }}</p>
+      <p><i class="fas fa-calendar-alt"></i> Data de Lançamento: {{ conjunto.releaseDate | date }}</p>
+      <p><i class="fas fa-gavel"></i> Legalidades: 
+        <span *ngFor="let legality of conjunto.legalities | keyvalue">
+          {{ legality.key }}: {{ legality.value }}
+        </span>
+      </p>
     </div>
   </div>
   <div class="pagination-buttons">
-    <button (click)="previousPage()" [disabled]="currentPage === 1">Anterior</button>
-    <button (click)="nextPage()">Próximo</button>
+    <button (click)="previousPage()" [disabled]="currentPage === 1"><i class="fas fa-arrow-left"></i> Anterior</button>
+    <button (click)="nextPage()">Próximo <i class="fas fa-arrow-right"></i></button>
   </div>
 </div>
