--- a/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.html
+++ b/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.html
@@ -21,6 +21,7 @@
   </div>
   <div class="pagination-buttons">
     <button (click)="previousPage()" [disabled]="currentPage === 1"><i class="fas fa-arrow-left"></i> Anterior</button>
+    <span class="page-info">{{ currentPage }} / {{ totalPages }}</span>
     <button (click)="nextPage()">Próximo <i class="fas fa-arrow-right"></i></button>
   </div>
 </div>
