--- a/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.scss
+++ b/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.scss
@@ -123,3 +123,29 @@
         }
     }
 }
+
+.pagination-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  
+    .page-info {
+      margin: 0 15px;
+      font-size: 16px;
+      font-weight: bold;
+    }
+  
+    button {
+      padding: 5px 10px;
+      border: none;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+      &:disabled {
+        background-color: #ccc;
+        cursor: not-allowed;
+      }
+    }
+  }
+  
