--- a/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.html
+++ b/src/app/baralhos/buscar-conjuntos/buscar-conjuntos.component.html
@@ -9,19 +9,24 @@
     <div *ngFor="let conjunto of conjuntos | async" class="set-card">
       <h3><strong><i class="fas fa-cube"></i> {{ conjunto.name }}</strong></h3>
       <img [src]="conjunto.images.logo" alt="Logo do conjunto {{ conjunto.name }}">
-      <p><i class="fas fa-layer-group"></i> Série: {{ conjunto.series }}</p>
-      <p><i class="fas fa-cards"></i> Total de Cartas: {{ conjunto.total }}</p>
-      <p><i class="fas fa-calendar-alt"></i> Data de Lançamento: {{ conjunto.releaseDate | date }}</p>
-      <p><i class="fas fa-gavel"></i> Legalidades: 
-        <span *ngFor="let legality of conjunto.legalities | keyvalue">
-          {{ legality.key }}: {{ legality.value }}
-        </span>
-      </p>
+      <ul>
+        <li><i class="fas fa-layer-group"></i> Série: {{ conjunto.series }}</li>
+        <li><i class="fas fa-cards"></i> Total de Cartas: {{ conjunto.total }}</li>
+        <li><i class="fas fa-calendar-alt"></i> Data de Lançamento: {{ conjunto.releaseDate | date }}</li>
+        <li>
+          <i class="fas fa-gavel"></i> Legalidades:
+          <ul>
+            <li *ngFor="let legality of conjunto.legalities | keyvalue">
+              {{ legality.key }}: {{ legality.value }}
+            </li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </div>
   <div class="pagination-buttons">
     <button (click)="previousPage()" [disabled]="currentPage === 1"><i class="fas fa-arrow-left"></i> Anterior</button>
     <span class="page-info">{{ currentPage }} / {{ totalPages }}</span>
-    <button (click)="nextPage()">Próximo <i class="fas fa-arrow-right"></i></button>
+    <button (click)="nextPage()"><i class="fas fa-arrow-right"></i> Próximo</button>
   </div>
 </div>
